# Odroid_Face_Recognition

./: .gitignore  Doxyfile  README.md
client/: CMakeLists.txt  client.cpp  handlers.cpp  handlers.h
commun/: CMakeLists.txt  TCP.cpp  TCP.h  definitions.h  message.cpp  message.h  video.cpp  video.h
doc/html/: TCP_8cpp.html  TCP_8cpp_source.html  TCP_8h.html  TCP_8h_source.html  annotated.html  classOdroid-members.html  classOdroid.html  classVideo-members.html  classVideo.html  classes.html  client_8cpp.html  client_8cpp_source.html  dir_17197e2a5901f70601536f515e8d47d9.html  dir_b8e30a40d24fcff19bd64f713ec81846.html  dir_db3a54907829b36871118d03417739cd.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  handlers_8cpp.html  handlers_8cpp_source.html  handlers_8h.html  handlers_8h_source.html  index.html  main_8cpp.html  main_8cpp_source.html  message_8cpp.html  message_8cpp_source.html  message_8h.html  message_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespacepatch.html  namespaces.html  odroid_8cpp.html  odroid_8cpp_source.html  odroid_8h.html  (+13 more)
doc/latex/: TCP_8cpp.tex  TCP_8h.tex  annotated.tex  classOdroid.tex  classVideo.tex  client_8cpp.tex  dir_17197e2a5901f70601536f515e8d47d9.tex  dir_b8e30a40d24fcff19bd64f713ec81846.tex  dir_db3a54907829b36871118d03417739cd.tex  files.tex  handlers_8cpp.tex  handlers_8h.tex  main_8cpp.tex  message_8cpp.tex  message_8h.tex  namespacepatch.tex  namespaces.tex  odroid_8cpp.tex  (+8 more)
serveur/: CMakeLists.txt  odroid-deploy-gdb.sh  odroid.cpp  odroid.h  server.cpp  serverHandlers.cpp  serverHandlers.h
(+58 files in other folders)
